--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -19,6 +19,9 @@
         "moduleDetection": "force",
         "noEmit": true,
         "jsx": "react-jsx",
+        "types": [
+            "vite/client"
+        ],
         /* Linting */
         "strict": true,
         "noUnusedLocals": true,
