--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "rollup-plugin-visualizer": "^6.0.5",
     "sharp": "^0.34.5",
     "tailwindcss": "^4.1.17",
-    "typescript": "~5.9.3",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^8.46.4",
     "vite": "^5.4.11",
     "vite-plugin-pwa": "^1.2.0"
